feat(geral): add elementos no canva

--- a/style.css
+++ b/style.css
@@ -13,6 +13,14 @@ body {
     color: #151515;
 }
 
+.profile-photo {
+    width: 100px;
+    height: 100px;
+    background-color: aqua;
+    border-radius: 50%;
+    transition: all 0.3s ease-in-out;
+}
+
 .mr-1 {
     margin-right: 16px;
 }
