--- a/css/sections.css
+++ b/css/sections.css
@@ -7,3 +7,24 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+/* YouTube */
+.video-container {
+    overflow: hidden;
+    position: relative;
+    width:100%;
+}
+
+.video-container::after {
+    padding-top: 56.25%;
+    display: block;
+    content: '';
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
