feat(profilePhoto): separando por modulos

--- a/css/sections.css
+++ b/css/sections.css
@@ -1,5 +1,14 @@
+div[class^="beacons-section"]{
+    margin: 2rem 0;
+}
+
 .beacons-section-header {
     display: flex;
+    margin: 0!important;
+}
+
+.profile-image {
+    width: 100px;
 }
 
 .beacons-section-links {
