feat(header): add elementos no localStorage

--- a/css/sections.css
+++ b/css/sections.css
@@ -11,6 +11,8 @@ div[class^="beacons-section"]{
 
 .profile-image {
     width: 100px;
+    height: 100px;
+    object-fit: cover;
 }
 
 p.user-name {
