--- a/css/style.css
+++ b/css/style.css
@@ -36,8 +36,11 @@ body {
     background-color: #0a0a0a;
 }
 
-.mr-1 {
-    margin-right: 16px;
+.sticky-top {
+    position: -webkit-sticky;
+    position: sticky;
+    width: 99%;
+    top: 100px;
 }
 
 .drag-n-drop:hover {
