--- a/css/sections.css
+++ b/css/sections.css
@@ -4,6 +4,7 @@ div[class^="beacons-section"]{
 
 .beacons-section-header {
     display: flex;
+    flex-direction: column;
     margin: 0!important;
     gap: 1rem;
     align-items: center;
