--- a/css/sections.css
+++ b/css/sections.css
@@ -44,8 +44,13 @@ p.user-name {
     text-align: center;
 }
 
+.tiktokWrapper {
+    height: 536px;
+    width: 300px;
+}
+
 /* YouTube */
-.video-container {
+.youtubeWrapper {
     overflow: hidden;
     position: relative;
     width:100%;
@@ -63,4 +68,9 @@ p.user-name {
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.instagramWrapper {
+    height: 536px;
+    width: 100%;
 }
