--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,7 @@ body {
 }
 
 .preview {
+    background: transparent;
     background-repeat: no-repeat;
     background-size: cover;
     overflow: hidden auto;
@@ -130,6 +131,18 @@ body {
     background-position: center center;
     max-height: 812px;
     padding: 30px 20px 100px;
+}
+
+.effect {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top;
+    z-index: -1;
 }
 
 /* width */
