--- a/css/sections.css
+++ b/css/sections.css
@@ -1,7 +1,7 @@
 div[class^="beacons-section"]{
     margin: 2rem 0;
-    transform: translateX(-20px);
-    animation: fadeIn .3s ease-in-out forwards;
+    transform: translateY(-20px);
+    animation: fadeIn .4s ease-in-out forwards;
 }
 
 .beacons-section-header {
@@ -38,11 +38,11 @@ p.user-name {
 @keyframes fadeIn {
     from {
         opacity: 0;
-        transform: translateX(-20px);
+        transform: translateY(-20px);
     }
     to {
         opacity: 1;
-        transform: translateX(0);
+        transform: translateY(0);
     }
 }
 
